--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,18 @@
         "ext-iconv": "*",
         "davamigo/php-event-sourcing": "dev-feature/development",
         "php-amqplib/php-amqplib": "^2.7",
+        "sensio/framework-extra-bundle": "^5.1",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
         "symfony/monolog-bundle": "^3.1",
+        "symfony/twig-bundle": "^4.0",
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
-        "symfony/dotenv": "^4.0"
+        "symfony/dotenv": "^4.0",
+        "symfony/profiler-pack": "^1.0"
     },
     "repositories": [
         {
