Added default controller and a homepage. Test to connect to RabbitMQ queuing system

--- a/.env.dist
+++ b/.env.dist
@@ -9,7 +9,7 @@ APP_SECRET=07ed9fe8e9a7ac17bbf94e264bf4a031
 #TRUSTED_HOSTS=localhost,example.com
 ###< symfony/framework-bundle ###
 
-AMQP_HOST=localhost
+AMQP_HOST=evsourcing_queue
 AMQP_PORT=5672
 AMQP_USER=guest
 AMQP_PASSWORD=guest
