--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,13 +1,14 @@
 version: '2'
 services:
 
+  #############################################################################
   # See: docker/Dockerfile
   evsourcing_server:
     build: .
 
-    restart: always
+    restart: "always"
 
-    container_name: docker_evsourcing_server
+    container_name: "docker_evsourcing_server"
 
     environment:
       APACHE_RUN_USER: david
@@ -20,20 +21,22 @@ services:
       - "../.:/var/www/html"
 
     networks:
-      - evsourcing_network
+      - "evsourcing_network"
 
     links:
-      - evsourcing_database
-      - evsourcing_atorage
-      - evsourcing_queue
+      - "evsourcing_database"
+      - "evsourcing_atorage"
+      - "evsourcing_queue"
 
+
+  #############################################################################
   # See: https://hub.docker.com/_/mysql
   evsourcing_database:
     image: mysql:5.7
 
-    restart: always
+    restart: "always"
 
-    container_name: docker_evsourcing_database
+    container_name: "docker_evsourcing_database"
 
     environment:
       MYSQL_ROOT_PASSWORD: root
@@ -48,34 +51,40 @@ services:
       - "../var/docker/mysql:/var/lib/mysql"
 
     networks:
-      - evsourcing_network
+      - "evsourcing_network"
 
 
+  #############################################################################
   # See: https://hub.docker.com/r/_/rabbitmq/
   evsourcing_queue:
     image: rabbitmq:3-management
 
-    container_name: docker_evsourcing_queue
+    restart: "always"
+
+    container_name: "docker_evsourcing_queue"
 
     ports:
       - "5672:5672"
       - "15672:15672"
 
     networks:
-      - evsourcing_network
+      - "evsourcing_network"
 
 
+  #############################################################################
   # See: https://hub.docker.com/_/mongo/
   evsourcing_atorage:
     image: mongo:3
 
-    container_name: docker_evsourcing_storage
+    restart: "always"
+
+    container_name: "docker_evsourcing_storage"
 
     volumes:
       - "../var/docker/mongo:/data/db"
 
     networks:
-      - evsourcing_network
+      - "evsourcing_network"
 
 networks:
   evsourcing_network:
