--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "ext-iconv": "*",
         "davamigo/php-event-sourcing": "dev-feature/development",
+        "mongodb/mongodb": "^1.2",
         "php-amqplib/php-amqplib": "^2.7",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/console": "^4.0",
