--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -25,7 +25,7 @@ services:
 
     links:
       - "evsourcing_database"
-      - "evsourcing_atorage"
+      - "evsourcing_storage"
       - "evsourcing_queue"
 
 
@@ -73,7 +73,7 @@ services:
 
   #############################################################################
   # See: https://hub.docker.com/_/mongo/
-  evsourcing_atorage:
+  evsourcing_storage:
     image: mongo:3
 
     restart: "always"
