--- a/.env.dist
+++ b/.env.dist
@@ -9,11 +9,18 @@ APP_SECRET=07ed9fe8e9a7ac17bbf94e264bf4a031
 #TRUSTED_HOSTS=localhost,example.com
 ###< symfony/framework-bundle ###
 
-AMQP_HOST=evsourcing_queue
+###> doctrine/doctrine-bundle ###
+# Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
+# Configure your db driver and server_version in config/packages/doctrine.yaml
+DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+###< doctrine/doctrine-bundle ###
+
+AMQP_HOST=localhost
 AMQP_PORT=5672
 AMQP_USER=guest
 AMQP_PASSWORD=guest
 AMQP_VHOST=/
 
-MONGODB_HOST=evsourcing_storage
+MONGODB_HOST=localhost
 MONGODB_PORT=27017
