New commands and events to create publisher and books, update books and delete authors. Bugs fixed.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -40,8 +40,8 @@ services:
         tags: ['event_sourcing.command']
 
     # Application command handlers
-    App\BusinessLogic\Application\CommandHandler\:
-        resource: '../src/BusinessLogic/Application/CommandHandler'
+    App\BusinessLogic\Domain\CommandHandler\:
+        resource: '../src/BusinessLogic/Domain/CommandHandler'
         tags: ['event_sourcing.command_handler']
 
 imports:
