--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "require": {
         "php": "^7.1.3",
         "ext-iconv": "*",
-        "davamigo/php-event-sourcing": "dev-feature/development",
+        "davamigo/php-event-sourcing": "^0.0",
         "mongodb/mongodb": "^1.2",
         "php-amqplib/php-amqplib": "^2.7",
         "sensio/framework-extra-bundle": "^5.1",
