--- a/config/services.yaml
+++ b/config/services.yaml
@@ -18,7 +18,7 @@ services:
     # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/*'
-        exclude: '../src/{Entity,Migrations,Tests}'
+        exclude: '../src/{Entity,Migrations,Tests,EventListener}'
 
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
@@ -29,17 +29,24 @@ services:
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
 
-    # Application events
+    # Application event listeners
+    App\EventListener\CommandBusDispatcherKernelResponseListener:
+        tags:
+            - name: kernel.event_listener
+              event: kernel.response
+              priority: 255
+
+    # Domain events
     App\BusinessLogic\Domain\Event\:
         resource: '../src/BusinessLogic/Domain/Event'
         tags: ['event_sourcing.event']
 
-    # Application commands
+    # Domain commands
     App\BusinessLogic\Domain\Command\:
         resource: '../src/BusinessLogic/Domain/Command'
         tags: ['event_sourcing.command']
 
-    # Application command handlers
+    # Domain command handlers
     App\BusinessLogic\Domain\CommandHandler\:
         resource: '../src/BusinessLogic/Domain/CommandHandler'
         tags: ['event_sourcing.command_handler']
